<resources>
    <string name="app_name">TatsuyaYamaguchi</string>
    <string name="title_activity_u_01">Sign in</string>

    <string name="entry">新規登録</string>
    <string name="meil">メールアドレスを入力</string>
    <string name="passeord">パスワードを入力</string>
    <string name="decide">決定</string>
    <string name="comp">完了</string>
    <string name="delete">削除</string>
    <string name="name">名前</string>
    <string name="degree">アルコール度数</string>
    <string name="outline">説明</string>
    <string name="image">画像</string>
    <string name="sansyo">参照</string>
    <string name="beil">ビール</string>
    <string name="wine">ワイン</string>
    <string name="ok">決定</string>
    <string name="insert">コンテンツ登録</string>

    <string name="pic">写真を撮る</string>
    <string name="drink">お酒を飲む</string>
    <string name="update">情報変更</string>
    <string name="his">履歴</string>


    Strings related to login
    <string name="osaketap">飲んだお酒をタップしてください</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is red</string>

    <string name="clist">コンテンツ一覧</string>
    <string name="logout">ログアウト</string>

    <string-array name="listOne">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="listTwo">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="listThree">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>
